test/functions/vass/main-returns-non-int.good
main-returns-non-int.chpl:4: error: main() returns a non-integer (real(64))
