test/functions/vass/main-returns-non-int.chpl

proc hi() { writeln("hello"); }

proc main() {
  hi();
  return 0.0;
}
